refactor: 레코드 사이의 관계 객체 매핑 읽기